RESOLVED FIXED100965
[V8] The DOMWrapperVisitor abstraction is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=100965
Summary [V8] The DOMWrapperVisitor abstraction is no longer needed
Adam Barth
Reported 2012-11-01 09:36:13 PDT
[V8] The DOMWrapperVisitor abstraction is no longer needed
Attachments
Patch (5.76 KB, patch)
2012-11-01 09:39 PDT, Adam Barth
no flags
Patch for landing (6.71 KB, patch)
2012-11-01 09:58 PDT, Adam Barth
no flags
Patch (6.51 KB, patch)
2012-11-01 09:59 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-11-01 09:39:21 PDT
Kentaro Hara
Comment 2 2012-11-01 09:43:08 PDT
Comment on attachment 171874 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171874&action=review > Source/WebCore/bindings/v8/ScriptProfiler.cpp:215 > + class VisitorAdapter : public v8::PersistentHandleVisitor { Nit: I would slightly prefer DOMObjectWrapperVisitor than VisitorAdapter. Also you can rename VisitorAdaptor for Nodes to DOMNodeWrapperVisitor.
Adam Barth
Comment 3 2012-11-01 09:57:44 PDT
Done.
Adam Barth
Comment 4 2012-11-01 09:58:48 PDT
Created attachment 171881 [details] Patch for landing
Adam Barth
Comment 5 2012-11-01 09:59:37 PDT
WebKit Review Bot
Comment 6 2012-11-01 10:48:53 PDT
Comment on attachment 171882 [details] Patch Clearing flags on attachment: 171882 Committed r133194: <http://trac.webkit.org/changeset/133194>
WebKit Review Bot
Comment 7 2012-11-01 10:48:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.