[V8] The DOMWrapperVisitor abstraction is no longer needed https://bugs.webkit.org/show_bug.cgi?id=100965

Reviewed by Kentaro Hara.

This patch removes the DOMWrapperVisitor interface because it is no
longer needed. As a consequence, DOMWrapperMaps no longer need to
support enumeration, and we can move more DOM objects to use the faster
intrusive wrappers.

There was one remaining user of DOMWrapperVisitor in the
ScriptProfiler, which I've moved over to enumerating objects directly
from V8, similar to a function above it in the same file.

* bindings/v8/DOMWrapperMap.h:
(WebCore):
(DOMWrapperMap):
* bindings/v8/IntrusiveDOMWrapperMap.h:
* bindings/v8/ScriptProfiler.cpp:
(WebCore::ScriptProfiler::visitNodeWrappers):
(WebCore::ScriptProfiler::visitExternalArrays):


Canonical link: https://commits.webkit.org/119061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133194 268f45cc-cd09-0410-ab3c-d52691b4dbfc